configuring Actuator>Prometheus>Grafana

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,15 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/urlshortener
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  metrics:
+    tags:
+      application: url-shortener
+
 app:
   redis:
     host: localhost
